--- a/index.html
+++ b/index.html
@@ -1,9 +1,227 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Página Bootstrap</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Nav -->
+    <nav class="navbar navbar-expand-lg" style="background-color: #70777e">
+      <div class="container-fluid">
+        <!-- Logo -->
+        <a class="navbar-brand text-white" href="#">LOREM IPSUM</a>
+        <!-- Enlaces de navegación visibles solo en pantallas grandes (lg) -->
+        <div class="d-none d-lg-flex">
+          <a href="#" class="nav-link mx-3 text-white">Dolor</a>
+          <a href="#" class="nav-link mx-3 text-white">Sit</a>
+          <a href="#" class="nav-link mx-3 text-white">Amet</a>
+        </div>
+        <!-- Botón de Menú Hamburguesa para pantallas md y menores -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarContent"
+          aria-controls="navbarContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+          style="
+            background-color: #b0b2b5;
+            border: 1px solid #c0c0c0;
+            border-radius: 8px;
+            padding: 5px;
+          "
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Contenido del Menú, visible en pantallas grandes y colapsable en pantallas md y menores -->
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <div class="d-lg-flex ms-auto">
+            <!-- Buscador visible solo en pantallas grandes (lg) -->
+            <form class="d-none d-lg-flex ms-auto">
+              <input
+                class="form-control"
+                type="search"
+                placeholder="Search"
+                aria-label="Buscar"
+              />
+            </form>
+          </div>
+
+          <!-- Enlaces de navegación en columna y buscador para pantallas md y menores -->
+          <ul class="navbar-nav flex-column d-lg-none">
+            <!-- Buscador en menú hamburguesa para md y menores -->
+            <li class="nav-item">
+              <form class="d-flex my-2">
+                <input
+                  class="form-control w-100"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Buscar"
+                />
+              </form>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Dolor</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Sit</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Amet</a>
+            </li>
+
+            <!-- Botón "Opciones" en el menú hamburguesa -->
+            <li class="nav-item">
+              <button
+                id="btnOpciones"
+                class="nav-link btn text-white text-start"
+                style="width: 100%"
+                onclick="toggleOpciones()"
+              >
+                Opciones
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid mt-4 p-4 d-none d-lg-block">
+      <h2 class="text-center w-100">Lorem ipsum...</h2>
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide my-4"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <p class="text-center">...Lorem ipsum dolor sit amet.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="text-center">
+              consectetur adipiscing elit. Vestibulum mollis,
+            </p>
+          </div>
+          <div class="carousel-item">
+            <p class="text-center">tortor ac congue commodo.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-4">
+      <div class="row">
+        <!-- Aside con botones de opciones, visible en pantallas grandes (lg) ocupando el 30% -->
+        <aside class="col-lg-3 d-none d-lg-block">
+          <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action"
+              >Opción 1</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >Opción 2</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >Opción 3</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >Opción 4</a
+            >
+          </div>
+        </aside>
+        <!-- Botones de Opciones para pantallas md y menores, ocultos inicialmente -->
+        <div id="opcionesMd" class="d-none mt-3 mb-3 list-group">
+          <a href="#" class="list-group-item list-group-item-action"
+            >Opción 1</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >Opción 2</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >Opción 3</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >Opción 4</a
+          >
+        </div>
+        <!-- Sección de párrafos ocupando el 70% en lg y adaptándose a dos columnas en md -->
+        <section class="col-12 col-lg-9">
+          <div class="row">
+            <!-- Cada columna de párrafos ocupa 33.33% en pantallas grandes (lg) y 50% en pantallas medianas (md) -->
+            <div class="col-md-6 col-lg-4">
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+              <p class="bg-light-gray">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vestibulum mollis, tortor ac congue commodo. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Facere, cumque quidem
+                sunt ab quam reiciendis nostrum, aliquid excepturi quas quis.
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
